# kdapp

./: .gitignore  CLAUDE.md  COMMIT_MSG.tmp  Cargo.toml  GEMINI.md  README.md
.github/workflows/: ci.yml  release.yml  security.yml
.kaspa-auth/: participant-peer-wallet.key
episode-contract/: Cargo.toml
episode-contract/src/: main.rs
examples/comment-it/: .gitignore  CLAUDE.md  Cargo.toml  DECENTRALIZATION_VISION.md  GEMINI.md  TESTING.md  test_session_revocation.sh  test_simple_http_peer.py  test_wallet_persistence.sh
examples/comment-it/Sonnet_4/: Sonnet.md  ipfs_comment_it.rs  ipfs_frontend.html
examples/comment-it/public/: index.html
examples/comment-it/src/: comment.rs  episode_runner.rs  lib.rs  main.rs  organizer.rs  wallet.rs
examples/comment-it/src/api/http/: blockchain_engine.rs  organizer_peer.rs  state.rs  types.rs  websocket.rs
examples/comment-it/src/api/http/handlers/: auth.rs  challenge.rs  comment.rs  mod.rs  revoke.rs  status.rs  verify.rs  wallet.rs
examples/comment-it/src/auth/: authentication.rs  mod.rs  session.rs
examples/comment-it/src/cli/: config.rs  mod.rs  resilient_peer_connection.rs
examples/comment-it/src/cli/commands/: authenticate.rs  authenticate_full_flow.rs  config.rs  mod.rs  submit_comment.rs  test_api_flow.rs
examples/comment-it/src/core/: episode.rs  types.rs
examples/comment-it/src/crypto/: challenges.rs
examples/episode-contract/: Cargo.toml
examples/kaspa-auth/: .gemini_commit_message.txt  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  CommentIT.md  GEMINI.md  IMPROVEMENTS.md  KaspaPokerTournament.md  README.md  RUN_COMMANDS_FROM_HERE.md  SOLUTION_SUMMARY.md  Session_1.md  Session_2.md  Session_3.md  Session_4.md  Session_5.md  TESTING_SUCCESS.md  UNIFIED_ARCHITECTURE_MILESTONE.md  WebSocket_Pure_P2P_Plan.md  my-key.txt  test-cli.sh  test_simple_server.py
examples/kaspa-auth/public/: README.md  index.html
examples/kaspa-auth/src/: auth_commands.rs  commitments.rs  economics.rs  episode_runner.rs  events.rs  http_server.rs  lib.rs  main.rs  oracle.rs  simple_auth_episode.rs  state_management.rs  time_bounded_auth.rs  wallet.rs
examples/kaspa-auth/src/api/http/: blockchain.rs  blockchain_engine.rs  blockchain_integration.rs  crypto.rs  endpoints.rs  handlers.rs  middleware.rs  mod.rs  organizer_peer.rs  server.rs  state.rs  types.rs  websocket.rs
examples/kaspa-auth/src/api/http/handlers/: auth.rs  challenge.rs  mod.rs  revoke.rs  status.rs  verify.rs
examples/kaspa-auth/src/api/websocket/: handlers.rs  mod.rs  organizer.rs  server.rs
examples/kaspa-auth/src/auth/: authentication.rs
examples/kaspa-auth/src/cli/: mod.rs
examples/kaspa-auth/src/cli/commands/: client.rs  demo.rs  http_organizer_peer.rs  http_server.rs  list_endpoints.rs  mod.rs  organizer_peer.rs  participant_peer.rs  server.rs  test.rs  test_api.rs  test_api_flow.rs
examples/kaspa-auth/src/core/: commands.rs  commitment_reveal.rs  episode.rs  errors.rs  mod.rs  types.rs
examples/kaspa-auth/src/crypto/: challenges.rs  commitments.rs  mod.rs  signatures.rs
examples/kaspa-auth/src/examples/: mod.rs
examples/kaspa-auth/src/examples/basic_auth/: mod.rs
examples/kaspa-auth/src/examples/escrow_auth/: mod.rs
examples/kaspa-auth/src/examples/group_auth/: mod.rs
examples/kaspa-auth/src/examples/time_locked_auth/: mod.rs
examples/kaspa-auth/src/examples/tournament_auth/: mod.rs
examples/kaspa-auth/src/network/: mod.rs
examples/kaspa-auth/src/storage/: mod.rs
examples/kaspa-poker-tournament/: Cargo.toml
examples/kaspa-poker-tournament/src/: main.rs
examples/tictactoe/: Cargo.toml
examples/tictactoe/src/: game.rs  main.rs
kaspa-poker-tournament/: Cargo.toml
kdapp/: Cargo.toml
kdapp/src/: engine.rs  episode.rs  generator.rs  lib.rs  pki.rs  proxy.rs
