[package]
name = "episode-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
kdapp = { path = "../../kdapp" }
kaspa-consensus-core = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-addresses = { workspace = true }
kaspa-bip32 = { workspace = true }
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"