[package]
name = "kaspa-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
kdapp = { path = "../../kdapp" }
borsh = { workspace = true }
secp256k1 = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = { version = "3.9.0", features = ["macros", "hex"] }
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.8", features = ["ws", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
tokio-tungstenite = "0.23"
tracing = "0.1"
tracing-subscriber = "0.3"

# Kaspa crypto dependencies
kaspa-consensus-core = { workspace = true }
kaspa-hashes = { workspace = true }
kaspa-addresses = { workspace = true }
kaspa-wrpc-client = { workspace = true }
kaspa-rpc-core = { workspace = true }